# rs-log-args

./: .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
commit-msg/: commit-msg  msg_validate  setup_hooks.sh
examples/: all_parameters.rs  auto_capture.rs  basic_usage.rs  custom_fields.rs  method_support.rs  selective_fields.rs  span_propagation.rs
log-args-runtime/: Cargo.toml  README.md
log-args-runtime/src/: lib.rs
log_args/: Cargo.toml  README.md
log_args/src/: lib.rs
test/: test_all_parameters.rs  test_auto_capture.rs  test_basic_functionality.rs  test_custom_fields.rs  test_method_support.rs  test_selective_fields.rs  test_span_propagation.rs
