[workspace]
resolver = "2"
members = ["log_args", "log-args-runtime"]

[package]
name = "log-args-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
log_args = { path = "./log_args", version = "0.1.4" }
log-args-runtime = { path = "./log-args-runtime", version = "0.1.2", features = [
    "with_context",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[workspace.package]
edition = "2024"
authors = ["MKJS Tech (P) Ltd"]

[workspace.dependencies]
log-args-runtime = { version = "0.1.2", features = ["with_context"] }
